# crud-app

./: .env  Cargo.toml
src/: db.rs  main.rs
src/handlers/: user_handlers.rs
src/models/: user_model.rs
